# solaredge2mqtt

./: .dockerignore  .env.dev.example  .env.example  .gitattributes  .gitignore  .pylintrc  =8  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  README.md  THIRD-PARTY-NOTICES  copilot-instructions.md  docker-compose.yml  docker-entrypoint.sh  freeze_version.py  generate_requirements.py  import_historic.py  migrate_config.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.devcontainer/: devcontainer.json  post-create.sh
.devcontainer/worktree/: devcontainer-lock.json  devcontainer.json  fix-worktree.sh
.githooks/: pre-commit
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/agents/: business-analyst.md  copilot-agents.yml  developer.md  documentation-expert.md  ml-expert.md  pv-expert.md  qa-engineer.md  reviewer.md  security-expert.md
.github/instructions/: python.instructions.md
.github/workflows/: build_project.yml
agents/: business-analyst.md  pv-expert.md  qa-engineer.md  reviewer.md  security-expert.md
doc/: battery_example.json  inverter_example.json  meter_example.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
examples/: docker-compose-full-stack.yaml  grafana.ini  grafana_dashboard.json  influxdb.conf
instructions/: python.instructions.md
scripts/: manage-worktrees.sh  setup-git-hooks.sh
solaredge2mqtt/: __init__.py  __main__.py  _version.py  api.py  eventbus.py  exceptions.py  forecast.py  influxdb.py  logging.py  modbus.py  models.py  monitoring.py  mqtt.py  service.py  settings.py  wallbox.py
solaredge2mqtt/config/: __init__.py  configuration.yml.example  secrets.yml.example
solaredge2mqtt/core/: exceptions.py  logging.py  models.py  settings.py
solaredge2mqtt/core/events/: __init__.py  events.py
solaredge2mqtt/core/influxdb/: __init__.py  events.py  settings.py
solaredge2mqtt/core/logging/: __init__.py  models.py  mqtt_sink.py  service_state.py
solaredge2mqtt/core/mqtt/: __init__.py  events.py  models.py  settings.py  state.py
solaredge2mqtt/core/settings/: __init__.py  loader.py  migrator.py  migrator_old.py  models.py
solaredge2mqtt/core/status/: __init__.py  events.py
solaredge2mqtt/core/timer/: __init__.py  events.py
solaredge2mqtt/flux/: actual_unit.flux  aggregate.flux  forecast_unit.flux  historic_unit.flux  production.flux  reduce.flux  training_data.flux
solaredge2mqtt/models/: __init__.py  base.py  energy.py  forecast.py  historic.py  homeassistant.py  modbus.py  monitoring.py  powerflow.py  sunspec.py  wallbox.py  weather.py
solaredge2mqtt/persistence/: influxdb.py
solaredge2mqtt/persistence/resources/: actual_unit.flux  aggregation.flux  energy_actual_unit.flux  energy_last_unit.flux  fill_prices.flux  forecast_unit.flux  historic_actual_unit.flux  historic_last_unit.flux  production.flux  training_data.flux
solaredge2mqtt/resources/: aggregation.flux  restore_raw_powerflow.flux
solaredge2mqtt/service/: __init__.py  base.py  forecast.py  homeassistant.py  http.py  influxdb.py  modbus.py  monitoring.py  wallbox.py  weather.py
solaredge2mqtt/services/: events.py  http.py  http_async.py  models.py
solaredge2mqtt/services/energy/: __init__.py  events.py  models.py  settings.py
solaredge2mqtt/services/forecast/: __init__.py  encoders.py  events.py  models.py  service.py  settings.py
solaredge2mqtt/services/homeassistant/: __init__.py  events.py  models.py  service.py  settings.py
solaredge2mqtt/services/modbus/: __init__.py  control.py  events.py  exceptions.py  models.py  settings.py  storage.py  sunspec.py
solaredge2mqtt/services/monitoring/: __init__.py  events.py  inputs.py  models.py  settings.py
solaredge2mqtt/services/powerflow/: __init__.py  events.py  models.py  settings.py
solaredge2mqtt/services/wallbox/: __init__.py  events.py  models.py  settings.py
solaredge2mqtt/services/weather/: __init__.py  events.py  models.py  settings.py
tests/: __init__.py  conftest.py  test___main__.py  test_freeze_version.py  test_generate_requirements.py  test_main.py  test_migrate_config.py  test_package_init.py  test_service.py  test_version.py
tests/config/: __init__.py  test_config.py
tests/core/: test_exceptions.py  test_models.py  test_sunspec_decode.py
tests/core/events/: test_event_bus.py  test_events.py
tests/core/influxdb/: test_client.py  test_events.py  test_settings.py
tests/core/logging/: test_init.py  test_models.py  test_mqtt_sink.py  test_service_state.py
tests/core/mqtt/: test_client.py  test_events.py  test_models.py  test_settings.py  test_state.py
tests/core/settings/: test_init.py  test_loader.py  test_migrator.py  test_models.py
tests/core/status/: __init__.py  test_events.py  test_service_status_controller.py
tests/core/timer/: test_events.py  test_timer.py
tests/services/: test_events.py  test_http_async.py  test_models.py
tests/services/energy/: test_events.py  test_models.py  test_service.py  test_settings.py
tests/services/forecast/: test_encoders.py  test_init.py  test_models.py  test_service.py  test_service_hyperparameter.py  test_settings.py
tests/services/homeassistant/: test_events.py  test_models.py  test_service.py  test_settings.py
tests/services/modbus/: test_base.py  test_battery.py  test_control.py  test_events.py  test_exceptions.py  test_inputs.py  test_inverter.py  test_meter.py  test_service.py  test_settings.py  test_storage.py  test_storage_control.py  test_storage_inputs.py  test_storage_service.py  test_unicode_exception_handling.py  test_unit.py  test_values.py
tests/services/monitoring/: __init__.py  test_models.py  test_service.py  test_settings.py
tests/services/powerflow/: test_cumulated_multi_inverter.py  test_events.py  test_models.py  test_models_extended.py  test_service.py  test_settings.py
tests/services/wallbox/: test_auth.py  test_client.py  test_events.py  test_models.py  test_settings.py
(+31 files in other folders)
