[project]
name = "solaredge2mqtt"
dynamic = ["version"]
description = "Read data from SolarEdge Inverter and publish it to MQTT"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11,<4"
license = "MIT"
authors = [
    { name = "Johannes Ott", email = "info@johannes-ott.net" }
]
keywords = ["smart home"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Home Automation",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiocsv==1.4.0",
    "aiohttp==3.13.1",
    "aiomqtt==2.4.0",
    "astral==3.2",
    "ephem==4.2",
    "influxdb-client==1.49.0",
    "jsonref==1.1.0",
    "loguru==0.7.3",
    "platformdirs==4.4.0",
    "pydantic==2.11.9",
    "pyjwt==2.10.1",
    "pymodbus==3.11.3",
    "tzlocal==5.3.1",
]

[project.urls]
Homepage = "https://github.com/DerOetzi/solaredge2mqtt"
Documentation = "https://github.com/DerOetzi/solaredge2mqtt/README.md"
Repository = "https://github.com/DerOetzi/solaredge2mqtt"
Issues = "https://github.com/DerOetzi/solaredge2mqtt/issues"

[project.scripts]
solaredge2mqtt = "solaredge2mqtt.service:run"

[project.optional-dependencies]
dev = [
    "setuptools-scm[toml]>=8",
    "ruff",
    "tomli",
]
forecast = [
    "numpy==2.3.3",
    "pandas==2.3.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2"
]

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools-scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]  
ignore = []
fixable = ["ALL"]         
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false 