[project]
name = "solaredge2mqtt"
dynamic = ["version"]
description = "Read data from SolarEdge Inverter and publish it to MQTT"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11,<4"
license = "MIT"
authors = [
    { name = "Johannes Ott", email = "info@johannes-ott.net" }
]
keywords = ["smart home"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Home Automation",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiocsv==1.4.0",
    "aiohttp==3.13.2",
    "aiomqtt==2.4.0",
    "astral==3.2",
    "ephem==4.2",
    "influxdb-client==1.49.0",
    "jsonref==1.1.0",
    "loguru==0.7.3",
    "platformdirs==4.5.1",
    "pydantic==2.12.5",
    "pyjwt==2.10.1",
    "pymodbus==3.11.4",
    "tzlocal==5.3.1",
]

[project.urls]
Homepage = "https://github.com/DerOetzi/solaredge2mqtt"
Documentation = "https://github.com/DerOetzi/solaredge2mqtt/README.md"
Repository = "https://github.com/DerOetzi/solaredge2mqtt"
Issues = "https://github.com/DerOetzi/solaredge2mqtt/issues"

[project.scripts]
solaredge2mqtt = "solaredge2mqtt.service:run"

[project.optional-dependencies]
dev = [
    "setuptools-scm[toml]>=8",
    "ruff",
    "tomli",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]
forecast = [
    "numpy==2.4.0",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "scipy==1.16.3"
]

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools-scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]  
ignore = []
fixable = ["ALL"]         
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["solaredge2mqtt"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]